fix links nav on mobile

--- a/styles.css
+++ b/styles.css
@@ -491,11 +491,19 @@ a:hover{
         /* justify-content: center; */
         margin-left: -10px;
     }
+    .blue.links h3{
+        margin: 0;
+    }
+
     .blue.links ul{
         display: flex;
-        flex-direction: row;
-        justify-content: center;
+        flex-direction: column;
+        align-items: center;
         width: 100%;
+        margin: 0;
+    }
+    
+    .blue.links ul li{
         margin: 0.5rem;
     }
 }
